# cooling-control

./: Cargo.toml  README.md  cooling-control.service  install.sh  liquidctl-monitor.service
src/: aquacomputer.rs  config.rs  control.rs  logging.rs  main.rs  notify.rs  sensors.rs  signal.rs
